# kafka-to-postgres

./: Cargo.toml  README.md
src/: main.rs
