[package]
name = "kafka_recv"
version = "0.1.0"
authors = ["kissbug8720 <kissbug8720@gmail.com>"]
edition = "2018"
default-run = "kafka_recv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
kafka = "0.8.0"
serde_json = "1.0.53"
async-std = { version = "1.4.0", features = [ "attributes" ] }
sqlx = { version = "0.3", features = [ "runtime-async-std", "macros", "postgres", "uuid" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15.0"
rand = "0.7.3"
